--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -11,25 +11,15 @@
     <script src="kendo/js/kendo.mobile.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <script src="app.js"></script>
-    <!-- START MAPA  -->
-    <!-- START MAPA  --> 
-    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2016.1.112/styles/kendo.silver.min.css">
-    <link rel="stylesheet" href="KendoMaps/kendo.common.min.css">
-    <script type="text/javascript" src="KendoMaps/kendo.all.min.js"></script>
-    <!--     END MAPS -->
-    <!--     END MAPS -->
+    <script src="app.js"></script> 
     <link href="styles/css.css" rel="stylesheet">
 </head>
 
-<body id="kendoUiMobileApp">
-    <script src="components/externo/index.js"></script>
-    <script src="components/puntos/index.js"></script>
-    <script src="components/registro/index.js"></script>
-    <script src="components/buscar/index.js"></script>
-    <script src="components/home/index.js"></script>
-    <script src="components/localizacion/index.js"></script>
-    <script src="components/firma/index.js"></script>
+<body id="kendoUiMobileApp"> 
+    <script src="components/puntos/index.js"></script>1
+    <script src="components/registro/index.js"></script>1
+    <script src="components/buscar/index.js"></script>1
+    <script src="components/home/index.js"></script>1  
     <div data-role="layout" data-id="inicio">
         <header data-role="header">
             <div data-role="navbar">
@@ -73,7 +63,7 @@
             </li>
             <li><a href="components/puntos/view.html" data-icon="favorites">Puntos</a>
             </li>
-            <li><a href="components/externo/view.html" data-icon="cerrar-sesion">Cerrar sesión</a>
+            <li><a href="components/home/view.html" data-icon="cerrar-sesion">Cerrar sesión</a>
             </li>
         </ul>
     </div>
