--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -16,10 +16,11 @@
 </head>
 
 <body id="kendoUiMobileApp"> 
-    <script src="components/puntos/index.js"></script>1
-    <script src="components/registro/index.js"></script>1
-    <script src="components/buscar/index.js"></script>1
-    <script src="components/home/index.js"></script>1  
+    <script src="components/puntos/index.js"></script>
+    <script src="components/puntosver/index.js"></script>
+    <script src="components/registro/index.js"></script>
+    <script src="components/buscar/index.js"></script>
+    <script src="components/home/index.js"></script> 
     <div data-role="layout" data-id="inicio">
         <header data-role="header">
             <div data-role="navbar">
@@ -62,6 +63,8 @@
             <li><a href="components/registro/view.html" data-icon="compose">Registro</a>
             </li>
             <li><a href="components/puntos/view.html" data-icon="favorites">Puntos</a>
+            </li>
+            <li><a href="components/puntosver/view.html" data-icon="favorites">Puntosver</a>
             </li>
             <li><a href="components/home/view.html" data-icon="cerrar-sesion">Cerrar sesión</a>
             </li>
