--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -18,8 +18,7 @@
 <body id="kendoUiMobileApp"> 
     <script src="components/puntos/index.js"></script>
     <script src="components/puntosver/index.js"></script>
-    <script src="components/registro/index.js"></script>
-    <script src="components/buscar/index.js"></script>
+
     <script src="components/home/index.js"></script> 
     <div data-role="layout" data-id="inicio">
         <header data-role="header">
@@ -54,20 +53,21 @@
             </div>
         </header>
         <ul id="navigation-container" data-role="listview">
+            <li><a href="components/home/view.html" data-icon="cerrar-sesion">Revista</a>
+            </li>
             <!--
             <li><a href="components/home/view.html" data-icon="home">Inicio</a>
             </li>
-			-->
+			
             <li><a href="components/buscar/view.html" data-icon="search">Buscar</a>
             </li>
             <li><a href="components/registro/view.html" data-icon="compose">Registro</a>
-            </li>
+            </li>-->
             <li><a href="components/puntos/view.html" data-icon="favorites">Puntos</a>
             </li>
             <li><a href="components/puntosver/view.html" data-icon="favorites">Puntosver</a>
             </li>
-            <li><a href="components/home/view.html" data-icon="cerrar-sesion">Cerrar sesión</a>
-            </li>
+            
         </ul>
     </div>
     <!-- START_CUSTOM_CODE_kendoUiMobileApp -->
